--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "restore-terminals",
   "displayName": "Restore Terminals",
   "description": "Spawn integrated terminals and run commands on startup",
-  "version": "1.1.8",
-  "publisher": "EthanSK",
+  "version": "1.1.9",
+  "publisher": "Eyalhl, based on EthanSK's project",
   "icon": "icon.png",
   "repository": {
     "type": "git",
-    "url": "https://github.com/EthanSK/restore-terminals-vscode"
+    "url": "https://github.com/eyal-hl/restore-terminals-vscode"
   },
   "engines": {
     "vscode": "^1.46.0"
