--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "restore-terminals",
-  "displayName": "Restore Terminals",
+  "name": "restore-terminals-with-presets",
+  "displayName": "Restore Terminals with presets",
   "description": "Spawn integrated terminals and run commands on startup",
   "version": "1.1.9",
   "publisher": "Eyalhl",
